--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ caption{
 li > ol{
   font-size: 12px;
 }
-body > img{
+img, body > img{
   border: 4px solid white;
   border-radius: 15px 50px 30px 5px;
 }
