--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ body{
 p{
   font-size: 14px;
 }
-h1, div > h1 > strong{
+div > h1, div > h1 > strong{
     border-bottom: 2px solid darkred;
 }
 table{
