--- a/css/main.css
+++ b/css/main.css
@@ -9,10 +9,7 @@ p{
   font-size: 14px;
 }
 div > h1{
-    border-bottom: 2px solid darkred;
-}
-div > h1 > strong{
-    border-bottom: 2px solid darkred;
+  text-decoration: underline solid darkred;
 }
 table{
     border: 3px dashed darkred;
