--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,9 @@ body > img{
   border: 4px solid white;
   border-radius: 15px 50px 30px 5px;
 }
+input {
+  width: 100px;
+}
 input, select, options {
 color: darkred;
 }
