--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -3,7 +3,23 @@ body{
 }
 h1{
     text-align: center;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 a{
-    margin-right: 10px;
+    margin-right: 20px;
+    letter-spacing: 3px;
+    text-align: center;
+}
+p{
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+h2{
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+section{
+    border-radius: 25px;
+    border: 2px solid #627174;
+    padding: 20px;
+    width: 200px;
+    height: 150px;
 }
