--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -17,9 +17,14 @@ h2{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 section{
-    border-radius: 25px;
+    border-radius: 100px;
     border: 2px solid #627174;
     padding: 20px;
     width: 200px;
     height: 150px;
+}
+.division{
+    display: inline-block;
+    border: 1px none;
+    padding: 1rem 1rem;
 }
