--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -17,7 +17,7 @@ h2{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 section{
-    border-radius: 50x;
+    border-radius: 50px;
     border: 2px solid #627174;
     padding: 20px;
     width: 200px;
