--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -1,5 +1,7 @@
 body{
     background-color: #c5e2e9;
+    display: grid;
+    justify-content: center;
     grid-gap: 5px 50px;
     grid-template-columns: auto;
     grid-template-areas: "head" "contactinfo" "socials";
