--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -2,7 +2,7 @@ body{
     background-color: #c5e2e9;
     display: grid;
     justify-content: center;
-    grid-gap: 5px 50px;
+    grid-gap: auto;
     grid-template-columns: auto;
     grid-template-areas: "head" "contactinfo" "socials";
 }
