--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -33,6 +33,7 @@ section{
     height: 150px;
 }
 .float-container {
+    display: flex;
     border: 3px solid #c5e2e9;
     padding: 20px;
     }
@@ -41,15 +42,11 @@ section{
     float: left;
     padding: 20px;
     border: 2px solid #c5e2e9;
+    flex: 1;
+    margin-right: 20px;
     }
 .division{
     display: inline-block;
     border: 1px none;
     padding: 1rem 1rem;
-}
-#contactinfo {
-    grid-area: contactinfo;
-}
-#socials {
-    grid-area: socials;
 }
