--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -25,6 +25,9 @@ p{
 h2{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+ul {
+    type: circle;
+}
 section{
     border-radius: 50px;
     border: 2px solid #627174;
