--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -32,9 +32,10 @@ section{
     border-radius: 50px;
     border: 2px solid #627174;
     padding: 50px;
-    width: 200px;
+    width: 250px;
     height: 150px;
 }
+
 .float-container {
     display: flex;
     border: 3px solid #c5e2e9;
@@ -48,6 +49,10 @@ section{
     flex: 1;
     margin-right: 20px;
     }
+#education {
+    width: auto;
+    height: auto;
+}
 .division{
     display: inline-block;
     border: 1px none;
