--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -31,7 +31,7 @@ ul {
 section{
     border-radius: 50px;
     border: 2px solid #627174;
-    padding: 50px;
+    padding: 30px;
     width: 250px;
     height: 150px;
 }
@@ -49,7 +49,7 @@ section{
     flex: 1;
     margin-right: 20px;
     }
-#education {
+#education, #skills, #experience{
     width: auto;
     height: auto;
 }
