--- a/marketing/css/guild.css
+++ b/marketing/css/guild.css
@@ -6,9 +6,12 @@ body{
 }
 h1 {
     font-family:fantasy;
-    letter-spacing: 2px;
+    letter-spacing: 2.5px;
     text-align: center;
 }
-h2 {
+h3 {
     text-align: center;
+}
+img {
+    align-items: center;
 }
