--- a/marketing/css/guild.css
+++ b/marketing/css/guild.css
@@ -14,9 +14,9 @@ h3 {
     font-family: 'Times New Roman', Times, serif;
 }
 img {
-    align-items: center;
     border-radius: 15px;
     padding: 20px;
     width: 200px;
     height: 150px;
+    alignment: center;
 }
