--- a/marketing/css/guild.css
+++ b/marketing/css/guild.css
@@ -49,5 +49,17 @@ ul {
   }
 .photos {
   border: none;
-  width: 80px;
+  width: 120px;
+}
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.image {
+  flex-basis: 40%;
+}
+.text {
+  font-size: 20px;
+  padding-left: 20px;
 }
