--- a/marketing/css/guild.css
+++ b/marketing/css/guild.css
@@ -66,7 +66,13 @@ ul {
 .socials {
   border: none;
   width: 30px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .about {
-  padding: 40px;
+  padding: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+  font-size: 16px;
+  text-align: center;
 }
