--- a/marketing/css/guild.css
+++ b/marketing/css/guild.css
@@ -10,6 +10,11 @@ h1 {
     letter-spacing: 2.5px;
     text-align: center;
 }
+h2 {
+    font-family:fantasy;
+    letter-spacing: 3px;
+    text-align: center;
+}
 h3 {
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
