--- a/marketing/css/guild.css
+++ b/marketing/css/guild.css
@@ -11,7 +11,7 @@ h1 {
     text-align: center;
 }
 h2 {
-    font-family:fantasy;
+    font-family:'Times New Roman', Times, serif;
     letter-spacing: 3px;
     text-align: center;
 }
