--- a/marketing/css/guild.css
+++ b/marketing/css/guild.css
@@ -40,7 +40,7 @@ ul {
     background-color: #333;
   }
   
-li {
+ul > li {
     float: left;
   }
   
@@ -51,7 +51,7 @@ li a {
     padding: 14px 16px;
     text-decoration: none;
   }
-li a:hover {
+ul > li a:hover {
     background-color: #111;
   }
 .photos {
